--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/css/app.css">
+    <script src="./src/js/app.js"></script>
     <title>M&M Company MANAGER</title>
 </head>
 <body>
-    
 </body>
 </html>
