Add navbar index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
     <title>M&M Company MANAGER</title>
 </head>
 <body>
+  <header>
+		<h2 class="logo"><a href="#bannerArea">M&M</a></h2>
+		<nav>
+			<ul class="nav_links">
+				<li><a href="#">faktura sprzedaży</a></li>
+				<li><a href="#aboutUs">faktura zakupu</a></li>
+				<li><a href="#">dokumenty</a></li>
+				<li><a href="#conce">sprzęt</a></li>
+        <li><a href="#">licencje</a></li>
+        <li><a href="#">Zaloguj sie</a></li>
+			</ul>
+		</nav>	
+	</header>
 </body>
 </html>
