Add banner-area and css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/app.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	  <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="styleheet">
     <script src="./src/js/app.js"></script>
     <title>M&M Company MANAGER</title>
 </head>
@@ -20,6 +22,9 @@
         <li><a href="#">Zaloguj sie</a></li>
 			</ul>
 		</nav>	
-	</header>
+  </header>
+  <section class="banner-area" id="bannerArea">
+		<h1>collect all documents.</h1>
+	</section>
 </body>
 </html>
