--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<ul class="nav_links">
 				<li><a href="#">faktura sprzedaży</a></li>
 				<li><a href="#aboutUs">faktura zakupu</a></li>
-				<li><a href="#">dokumenty</a></li>
+				<li><a href="doc.html">dokumenty</a></li>
 				<li><a href="#conce">sprzęt</a></li>
         <li><a href="#">licencje</a></li>
         <li><a href="#">Zaloguj sie</a></li>
